--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -17,6 +19,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.6.0",
+    "@testing-library/user-event": "^14.5.2",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
@@ -27,7 +30,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^15.0.6",
     "@types/jest": "29.5.11",
     "@types/node": "^20",
@@ -36,8 +39,10 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^2.8.8",
     "sass": "^1.77.4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
